# qlementine-icons-meson

./: meson.build  meson.options
sandbox/: meson.build
sources/: meson.build
